--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="icon" type="image/jpg" href="https://kevydev.github.io/portfolio/kevydev-logo.jpg" />
-    <link rel="shortcut icon" type="image/jpg" href="https://kevydev.github.io/portfolio/kevydev-logo.jpg" />
-    <link rel="apple-touch-icon" href="https://kevydev.github.io/portfolio/kevydev-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password Generator - KevyDev</title>
-    <meta name="description" content="A password generator app made by KevyDev." />
+    <title>Password Generator - Cristian</title>
+    <meta name="description" content="A password generator app made by Cristian." />
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
